<resources>
    <string name="app_name">Activity ITE APP</string>
    <string name="year_1">Year 1</string>
    <string name="year_2">Year 2</string>
    <string name="year_3">Year 3</string>
    <string name="year_4">Year 4</string>
    <string name="f_name">Admin</string>
    <string name="l_name">I</string>
    <string name="bio">ITE</string>
    <string name="grid">Change to Grid Layout</string>
    <string name="list">Change to List Layout</string>
    <string name="my_activities">My Activities</string>
    <string name="profile_image">Profile Image</string>
    <string name="cover_image">Cover Image</string>
    <string name="finish_icon">Finish icon</string>
    <string name="title">Information</string>
    <string name="date">07 December 2025</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="more_icon">More Icon</string>
    <string name="major">Major</string>
    <string name="generation">Generation</string>
</resources>