<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_marginTop="42dp"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/coverImage"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/img_cover"
            android:background="@color/black"
            android:contentDescription="@string/cover_image"/>
        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#702196F3"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/my_activities"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xmark_solid"
                app:tint="@color/white"
                android:contentDescription="@string/finish_icon"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="63dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp">

            <!-- INNER CARD (IMAGE) -->
            <androidx.cardview.widget.CardView
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:cardCornerRadius="61dp"
                app:cardElevation="0dp">
                <ImageView
                    android:id="@+id/profileImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_cover"
                    android:contentDescription="@string/profile_image"/>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="2dp"/>
        <TextView
            android:layout_marginStart="2dp"
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#50000000" />
    <LinearLayout
        android:layout_margin="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:background="@color/gray">
                <TextView
                    android:id="@+id/year1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/year_1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    />
                <TextView
                    android:id="@+id/year2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/year_2"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />
                <TextView
                    android:id="@+id/year3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/year_3"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />
                <TextView
                    android:id="@+id/year4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/year_4"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.08"
            android:layout_height="0dp"/>
        <ImageView
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grid_2"
            app:tint="@color/black"
            android:contentDescription="@string/grid"/>
<!--        <ImageView-->
<!--            android:id="@+id/list"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/angle_left_solid_full"-->
<!--            app:tint="@color/black"-->
<!--            android:contentDescription="@string/grid"/>-->
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rclAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No activities found"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>