<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageUrl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            android:src="@drawable/img_cover" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:text="@string/date"
                android:textColor="#50000000"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_icon"
            android:src="@drawable/ellipsis_vertical_solid_full"
            app:tint="@color/black" />
    </LinearLayout>

</LinearLayout>
